--- a/html/formulario.html
+++ b/html/formulario.html
@@ -76,6 +76,9 @@
             <button type="submit">Enviar</button>
         </div>
     </form>
+    <?php
+        include("correos.php");
+    ?>
     <script src="../js/mainFormulario.js"></script>
 </body>
 </html>
