Cambiando de directorio de agendar hacia formulario.php

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="contenedor-textos">
             <h1 class="titulo">Agenda tu cita ahora</h1>
             <h2 class="subtitulo">La decisión la tienes tú</h2>
-            <a target="_blanck" href="html/formulario.html" class="cta">Agenda ahora</a>
+            <a target="_blanck" href="html/formulario.php" class="cta">Agenda ahora</a>
         </div>
         <div class="contenedor-imagen">
             <img src="ilustraciones/ilustracion.svg" alt="" class="img">
