--- a/html/formulario.html
+++ b/html/formulario.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <form action="correos.php" method="POST" id="form">
+    <form action="correos.php" method="post" id="form">
         <div class="form">
             <h1>Registro</h1>
             <h3 class="subtitulo">Información de contacto</h3>
@@ -76,9 +76,6 @@
             <button type="submit">Enviar</button>
         </div>
     </form>
-    <?php
-        include("correos.php");
-    ?>
     <script src="../js/mainFormulario.js"></script>
 </body>
 </html>
