Probando la instalacion de php en el servidor

--- a/formulario.html
+++ b/formulario.html
@@ -33,15 +33,15 @@
             <h3>Detalles de la cita</h3>
 
             <div class="grupo">
-                <input type="date" name="primeraFecha" id="name" required><span class="barra"></span>
+                <input type="date" name="primeraFecha" id="primeraFecha" required><span class="barra"></span>
                 <label for="" class="fechas">Fecha</label>
             </div>
             <div class="grupo">
-                <input type="date" name="segundaFecha" id="name"><span class="barra"></span>
+                <input type="date" name="segundaFecha" id="segundaFecha"><span class="barra"></span>
                 <label for="" class="fechas">Segunda fecha (opcional)</label>
             </div>
             <div class="grupo">
-                <input type="date" name="terceraFecha" id="name"><span class="barra"></span>
+                <input type="date" name="terceraFecha" id="terceraFecha"><span class="barra"></span>
                 <label for="" class="fechas">Tercera Fecha (opcional)</label>
             </div>
             <div class="grupo">
