--- a/formulario.html
+++ b/formulario.html
@@ -1,4 +1,3 @@
-<!--  
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -9,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <form action="correos.php" method="post" id="form">
+    <form action="phpFormulario/correos.php" method="post" id="form">
         <div class="form">
             <h1>Registro</h1>
             <h3 class="subtitulo">Información de contacto</h3>
@@ -79,4 +78,3 @@
     </form>
 </body>
 </html>
--->
