Agregando la funcion de chat de whats

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="contenedor-textos">
             <h1 class="titulo">Agenda tu cita ahora</h1>
             <h2 class="subtitulo">La decisión la tienes tú</h2>
-            <a href="formulario.html" class="cta">Agenda ahora</a>
+            <a href="https://api.whatsapp.com/send?phone=50584906860&text=Hola!&nbsp;en&nbsp;que&nbsp;te&nbsp;podemos&nbsp;ayudar?" class="cta">Agenda ahora</a>
         </div>
         <div class="contenedor-imagen">
             <img src="ilustraciones/ilustracion.svg" alt="" class="img">
